[gd_scene load_steps=9 format=2]

[ext_resource path="res://themes/HUD.tres" type="Theme" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/images/FindTheCharger.png" type="Texture2D" id=3]
[ext_resource path="res://assets/musics/main_track_find_the_charger.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/musics/found_part_fanfare.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/musics/title_screen.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/musics/failure.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/musics/rumaging.ogg" type="AudioStream" id=8]

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Failure" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource( 7 )

[node name="TimerView" type="ColorRect" parent="."]
offset_right = 136.0
offset_bottom = 64.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="TimerLabel" type="Label" parent="TimerView"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -16.0
offset_right = 35.5
offset_bottom = 16.0
theme = ExtResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
text = "00:20"

[node name="FoundItems" type="ColorRect" parent="."]
offset_left = 856.0
offset_right = 1024.0
offset_bottom = 64.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="FoundItemsLabel" type="Label" parent="FoundItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -16.0
offset_right = 59.5
offset_bottom = 16.0
theme = ExtResource( 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
text = "Items 0/2"

[node name="EndScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.329412 )

[node name="EndLabel" type="Label" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -124.0
offset_right = 347.0
offset_bottom = -38.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
uppercase = true

[node name="RetryButton" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -4.0
offset_right = 56.0
offset_bottom = 44.0
theme = ExtResource( 1 )
text = "Retry"

[node name="HomeButton" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 60.0
offset_right = 56.0
offset_bottom = 108.0
text = "Home"

[node name="TitleScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
color = Color( 1, 0.937255, 0.847059, 1 )

[node name="TitleScreenTexture" type="TextureRect" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -194.5
offset_right = 362.0
offset_bottom = 194.5
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PlayButton" type="Button" parent="TitleScreen/TitleScreenTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 156.0
offset_right = 70.0
offset_bottom = 215.0
theme = ExtResource( 1 )
text = "Play !"

[node name="GameTimer" type="Timer" parent="."]

[node name="FoundPart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Rummaging" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SoundEffectTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="EndScreen/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="EndScreen/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="TitleScreen/TitleScreenTexture/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="SoundEffectTimer" to="." method="_on_SoundEffectTimer_timeout"]
